Solve word wrapping with CSS
... instead of relying on automatically inserted zero-width spaces.

--- a/static/s/style.css
+++ b/static/s/style.css
@@ -72,7 +72,9 @@ tr, td {
 }
 
 #log .time { border-left:  1px solid #efefef; }
-#log .msg  { border-right: 1px solid #efefef; line-height: 1.3em; }
+#log .msg  { border-right: 1px solid #efefef; line-height: 1.3em;
+             word-wrap: break-word; overflow-wrap: break-word;
+}
 #log .act  { font-style: italic; }
 
 .log-index li {
